# nox

./: CMakeLists.txt  README.md  main.cc
doc/: TODO.txt
include/: common.h  platform.h
include/core/: file.h  system.h
include/gfx_api/: vertex_description.h
include/math/: matrix.h  vectors.h
src/core/: system.cc
